--- a/data/people.yml
+++ b/data/people.yml
@@ -37,4 +37,4 @@ former_graduates:
 former_undergrads:
     - name: Yerin Kim (김예린)
     - name: Minju Kim (김민주)
-    # - name: Jaeyong Lee (이재용)
+    - name: Jaeyong Lee (이재용)
