--- a/data/news.yml
+++ b/data/news.yml
@@ -1,6 +1,6 @@
 - title: "One paper <a href='https://arxiv.org/abs/2403.19254'>Imperceptible Protection Against Style Imitation from Diffusion Models</a> has been accepted to IEEE Transactions on Multimedia (TMM)."
   time: July 2025
-- title: "One paper <a href=''>A Plug-and-Play Approach for Robust Image Editing in Text-to-Image Diffusion Models</a> has been accepted to ICCV Workshop (What is Next in Multimodal Foundation Models?)."
+- title: "One paper <a href=''>A Plug-and-Play Approach for Robust Image Editing in Text-to-Image Diffusion Models</a> has been accepted to ICCV Workshop 2025 (What is Next in Multimodal Foundation Models?)."
   time: July 2025
 - title: "One paper <a href='https://webtoon.github.io/impasto/'>Nearly Zero-Cost Protection Against Mimicry by Personalized Diffusion Models</a> has been accepted to CVPR 2025."
   time: June 2025
