--- a/data/publications.yml
+++ b/data/publications.yml
@@ -14,7 +14,7 @@ years:
             - name: Daesik Kim
             - name: Seung-Hun Nam
               link: https://sites.google.com/view/shnam/
-        venue: IEE Transactions on Multimedia (TMM), IF=9.7 (JCR Top 5%)
+        venue: IEEE Transactions on Multimedia (TMM), IF=9.7 (JCR Top 5%)
         arXiv: https://arxiv.org/abs/2403.19254
         img: tmm2025a.png
         
