--- a/data/news.yml
+++ b/data/news.yml
@@ -1,4 +1,4 @@
-- title: "One paper <a href='https://arxiv.org/abs/2305.15194'>DiffBlender: Scalable and Composable Multimodal Text-to-Image Diffusion Models</a> has been accepted to Expert Systems with Applications (ESWA)."
+- title: "One paper <a href='https://arxiv.org/abs/2305.15194'>DiffBlender: Composable and Versatile Multimodal Text-to-Image Diffusion Models</a> has been accepted to Expert Systems with Applications (ESWA)."
   time: Aug 2025
 - title: "One paper <a href='https://arxiv.org/abs/2403.19254'>Imperceptible Protection Against Style Imitation from Diffusion Models</a> has been accepted to IEEE Transactions on Multimedia (TMM)."
   time: July 2025
