--- a/data/news.yml
+++ b/data/news.yml
@@ -1,8 +1,10 @@
+- title: "One paper <a href=''>T2LF: LLM-Guided Multimodal Diffusion for Text-to-Light Field Synthesis</a> has been accepted to WACV 2026."
+  time: Nov 2025
+- title: Professor Ahn has been invited to present a tutorial titled <i>"Responsible Generative AI&#58; From Provenance to Protection"</i> at <a href='https://icce-asia2025.org/2025/'>ICCE-Asia 2025</a>.
+  time: Oct 2025
 - title: "One paper <a href='https://arxiv.org/abs/2305.15194'>DiffBlender: Composable and Versatile Multimodal Text-to-Image Diffusion Models</a> has been accepted to Expert Systems with Applications (ESWA)."
   time: Aug 2025
 - title: "One paper <a href='https://arxiv.org/abs/2403.19254'>Imperceptible Protection Against Style Imitation from Diffusion Models</a> has been accepted to IEEE Transactions on Multimedia (TMM)."
-  time: July 2025
-- title: "One paper <a href=''>A Plug-and-Play Approach for Robust Image Editing in Text-to-Image Diffusion Models</a> has been accepted to ICCV Workshop 2025 (<a href='https://sites.google.com/view/mmfm4thworkshop/home'>What is Next in Multimodal Foundation Models?</a>)."
   time: July 2025
 - title: "One paper <a href='https://webtoon.github.io/impasto/'>Nearly Zero-Cost Protection Against Mimicry by Personalized Diffusion Models</a> has been accepted to CVPR 2025."
   time: June 2025
