--- a/data/news.yml
+++ b/data/news.yml
@@ -1,3 +1,5 @@
+- title: "One paper <a href='https://arxiv.org/abs/2510.24133'>Compositional Image Synthesis with Inference-Time Scaling</a> has been accepted to ICASSP 2026."
+  time: Jan 2026
 - title: "One paper <a href=''>T2LF: LLM-Guided Multimodal Diffusion for Text-to-Light Field Synthesis</a> has been accepted to WACV 2026."
   time: Nov 2025
 - title: Professor Ahn has been invited to present a tutorial titled <i>"Responsible Generative AI&#58; From Provenance to Protection"</i> at <a href='https://icce-asia2025.org/2025/'>ICCE-Asia 2025</a>.
